[package]
name = "freshrss-image-cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.4.1"
base32 = "0.4.0"
chrono = "0.4.31"
lazy_static = "1.4.0"
log = "0.4.20"
pretty_env_logger = "0.5.0"
reqwest = "0.11.23"
rss = "2.0.6"
scraper = "0.18.1"
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
url = "2.5.0"
